--- a/embed/list_directory.html
+++ b/embed/list_directory.html
@@ -38,7 +38,7 @@
   </ul>
   {{- else }}
   <div role='alert' class='alert mv2 pa2 br2 flex items-center'>
-    <div>List regenerated ({{ $count }} file{{ if ne $count 1.0 }}s{{ end }} in {{ $timeTaken }})</div>
+    <div>list regenerated ({{ $count }} file{{ if ne $count 1.0 }}s{{ end }} in {{ $timeTaken }})</div>
     <div class='flex-grow-1'></div>
     <button class='f3 bg-transparent bn o-70 hover-black' data-dismiss-alert>&times;</button>
   </div>
@@ -49,9 +49,9 @@
   {{- $parent := index $.PostRedirectGet "parent" }}
   {{- $name := index $.PostRedirectGet "name" }}
   {{- if eq $parent "posts" }}
-  <div>Category created: <a href='/{{ join "files" $.SitePrefix $parent $name }}/'>{{ $name }}</a></div>
+  <div>category created: <a href='/{{ join "files" $.SitePrefix $parent $name }}/'>{{ $name }}</a></div>
   {{- else }}
-  <div>Folder created: <a href='/{{ join "files" $.SitePrefix $parent $name }}/'>{{ $name }}</a></div>
+  <div>folder created: <a href='/{{ join "files" $.SitePrefix $parent $name }}/'>{{ $name }}</a></div>
   {{- end }}
   <div class='flex-grow-1'></div>
   <button class='f3 bg-transparent bn o-70 hover-black' data-dismiss-alert>&times;</button>
