--- a/embed/file.html
+++ b/embed/file.html
@@ -35,7 +35,13 @@
 {{- end }}
 {{- if eq (index $.PostRedirectGet "from") "files" }}
 <div role='alert' class='alert mv2 pa2 br2 flex items-center'>
-  <div>saved</div>
+  {{- if eq (head $.FilePath) "pages" }}
+  <div>page saved</div>
+  {{- else if eq (head $.FilePath) "posts" }}
+  <div>post saved</div>
+  {{- else }}
+  <div>file saved</div>
+  {{- end }}
   <div class='flex-grow-1'></div>
   <button class='f3 bg-transparent bn o-70 hover-black' data-dismiss-alert>&times;</button>
 </div>
