--- a/embed/list_root_directory.html
+++ b/embed/list_root_directory.html
@@ -36,19 +36,9 @@
 {{- end }}
 
 {{- if eq (index $.PostRedirectGet "from") "regenerate" }}
-  {{ $count := index $.PostRedirectGet "count" }}
-  {{ $timeTaken := index $.PostRedirectGet "timeTaken" }}
-  {{ $templateErrors := index $.PostRedirectGet "templateErrors" }}
-  {{- if $templateErrors }}
-  <div class='b invalid-red'>template errors:</div>
-  <ul class='list-style-disc ph3 invalid-red'>
-    {{- range $error := $templateErrors }}
-    <li>{{ $error }}</li>
-    {{- end }}
-  </ul>
-  {{- else }}
+  {{- if not (index $.PostRedirectGet "templateErrors") }}
   <div role='alert' class='alert mv2 pa2 br2 flex items-center'>
-    <div>site regenerated ({{ $count }} file{{ if ne $count 1.0 }}s{{ end }} in {{ $timeTaken }})</div>
+    <div>site regenerated ({{ index $.PostRedirectGet "count" }} file{{ if ne (index $.PostRedirectGet "count") 1.0 }}s{{ end }} in {{ index $.PostRedirectGet "timeTaken" }})</div>
     <div class='flex-grow-1'></div>
     <button class='f3 bg-transparent bn o-70 hover-black' data-dismiss-alert>&times;</button>
   </div>
@@ -112,6 +102,18 @@
   </div>
   {{- end }}
 </div>
+{{- if eq (index $.PostRedirectGet "from") "regenerate" }}
+  {{- if index $.PostRedirectGet "templateErrors" }}
+  <div class='mv2'>
+    <div class='b invalid-red'>template errors:</div>
+    <ul class='list-style-disc ph3 invalid-red'>
+      {{- range $error := index $.PostRedirectGet "templateErrors" }}
+      <li>{{ $error }}</li>
+      {{- end }}
+    </ul>
+  </div>
+  {{- end }}
+{{- end }}
 <div class='bb pb2'><a href='/files/'>files</a> /{{ if $.SitePrefix }} <a href='/files/{{ $.SitePrefix }}/'>{{ $.SitePrefix }}</a> /{{ end }}</div>
 <ul class='mb4'>
   {{- range $file := $.Files }}
