--- a/embed/file.html
+++ b/embed/file.html
@@ -23,11 +23,11 @@
 {{- if eq (index $.PostRedirectGet "from") "createfile" }}
 <div role='alert' class='alert mv2 pa2 br2 flex items-center'>
   {{- if eq (head $.FilePath) "pages" }}
-  <div>page created</div>
+  <div>created page</div>
   {{- else if eq (head $.FilePath) "posts" }}
-  <div>post created</div>
+  <div>created post</div>
   {{- else }}
-  <div>file created</div>
+  <div>created file</div>
   {{- end }}
   <div class='flex-grow-1'></div>
   <button class='f3 bg-transparent bn o-70 hover-black' data-dismiss-alert>&times;</button>
@@ -36,11 +36,11 @@
 {{- if eq (index $.PostRedirectGet "from") "files" }}
 <div role='alert' class='alert mv2 pa2 br2 flex items-center'>
   {{- if eq (head $.FilePath) "pages" }}
-  <div>page saved</div>
+  <div>saved page</div>
   {{- else if eq (head $.FilePath) "posts" }}
-  <div>post saved</div>
+  <div>saved post</div>
   {{- else }}
-  <div>file saved</div>
+  <div>saved file</div>
   {{- end }}
   <div class='flex-grow-1'></div>
   <button class='f3 bg-transparent bn o-70 hover-black' data-dismiss-alert>&times;</button>
