--- a/embed/list_root_directory.html
+++ b/embed/list_root_directory.html
@@ -38,7 +38,7 @@
 {{- if eq (index $.PostRedirectGet "from") "regenerate" }}
   {{- if not (index $.PostRedirectGet "templateErrors") }}
   <div role='alert' class='alert mv2 pa2 br2 flex items-center'>
-    <div>site regenerated ({{ index $.PostRedirectGet "count" }} file{{ if ne (index $.PostRedirectGet "count") 1.0 }}s{{ end }} in {{ index $.PostRedirectGet "timeTaken" }})</div>
+    <div>regenerated site {{ index $.PostRedirectGet "count" }} file{{ if ne (index $.PostRedirectGet "count") 1.0 }}s{{ end }} in {{ index $.PostRedirectGet "timeTaken" }}</div>
     <div class='flex-grow-1'></div>
     <button class='f3 bg-transparent bn o-70 hover-black' data-dismiss-alert>&times;</button>
   </div>
@@ -46,7 +46,7 @@
 {{- end }}
 {{- if eq (index $.PostRedirectGet "from") "createsite" }}
 <div role='alert' class='alert mv2 pa2 br2 flex items-center'>
-  <div>site created (<a href='/files/{{ index $.PostRedirectGet "sitePrefix" }}/'>{{ trimPrefix (index $.PostRedirectGet "sitePrefix") "@" }}</a>)</div>
+  <div>created site <a href='/files/{{ index $.PostRedirectGet "sitePrefix" }}/'>{{ trimPrefix (index $.PostRedirectGet "sitePrefix") "@" }}</a></div>
   <div class='flex-grow-1'></div>
   <button class='f3 bg-transparent bn o-70 hover-black' data-dismiss-alert>&times;</button>
 </div>
@@ -55,7 +55,7 @@
 <div role='alert' class='alert mv2 pa2 br2 flex items-center'>
   <div class='flex items-center'>
     {{ template "heroicons-trash" }}
-    <span class='ml2'>site deleted ({{ index $.PostRedirectGet "siteName" }})</span>
+    <span class='ml2'>deleted site ({{ index $.PostRedirectGet "siteName" }})</span>
   </div>
   <div class='flex-grow-1'></div>
   <button class='f3 bg-transparent bn o-70 hover-black' data-dismiss-alert>&times;</button>
@@ -205,7 +205,7 @@
           <div class='ma2' style='min-width: 10rem;'>
             Contains your site's output files.
             <br><br>
-            <div class='f6' style='font-style: italic;'>For the tech-savvy: Notebrew is a static site generator that converts your pages and posts into static files. This is where the files are kept.</div>
+            <div class='f6' style='font-style: italic;'>More information: Notebrew is a static site generator that converts your pages and posts into static files. This is where the files are kept.</div>
           </div>
         </div>
       </details>
