--- a/embed/list_directory.html
+++ b/embed/list_directory.html
@@ -38,7 +38,7 @@
   </ul>
   {{- else }}
   <div role='alert' class='alert mv2 pa2 br2 flex items-center'>
-    <div>list regenerated ({{ $count }} file{{ if ne $count 1.0 }}s{{ end }} in {{ $timeTaken }})</div>
+    <div>regenerated list ({{ $count }} file{{ if ne $count 1.0 }}s{{ end }} in {{ $timeTaken }})</div>
     <div class='flex-grow-1'></div>
     <button class='f3 bg-transparent bn o-70 hover-black' data-dismiss-alert>&times;</button>
   </div>
