--- a/embed/list_root_directory.html
+++ b/embed/list_root_directory.html
@@ -38,7 +38,7 @@
 {{- if eq (index $.PostRedirectGet "from") "regenerate" }}
   {{- if not (index $.PostRedirectGet "templateErrors") }}
   <div role='alert' class='alert mv2 pa2 br2 flex items-center'>
-    <div>regenerated site {{ index $.PostRedirectGet "count" }} file{{ if ne (index $.PostRedirectGet "count") 1.0 }}s{{ end }} in {{ index $.PostRedirectGet "timeTaken" }}</div>
+    <div>regenerated site ({{ index $.PostRedirectGet "count" }} file{{ if ne (index $.PostRedirectGet "count") 1.0 }}s{{ end }} in {{ index $.PostRedirectGet "timeTaken" }})</div>
     <div class='flex-grow-1'></div>
     <button class='f3 bg-transparent bn o-70 hover-black' data-dismiss-alert>&times;</button>
   </div>
