--- a/embed/index.html
+++ b/embed/index.html
@@ -8,5 +8,9 @@ p, ul, ol { margin-bottom: 2em; color: #1d1d1d; font-family: sans-serif; }
   &boxv; <a href='/posts/'>posts</a>
 </div>
 <hr>
+{{ if $.Site.Description }}
+{{ $.Site.Description }}
+{{ else }}
 <h1>Hello World!</h1>
 <p>Welcome to my blog.</p>
+{{ end }}
