--- a/embed/list_directory.html
+++ b/embed/list_directory.html
@@ -59,9 +59,11 @@
 {{- end }}
 {{- if eq (index $.PostRedirectGet "from") "delete" }}
 <div role='alert' class='alert mv2 pa2 br2 flex items-center'>
+  {{- $numDeleted := index $.PostRedirectGet "numDeleted" }}
+  {{- $numErrors := index $.PostRedirectGet "numErrors" }}
   <div class='flex items-center'>
     {{ template "heroicons-trash" }}
-    <span class='ml2'>{{ index $.PostRedirectGet "msg" }}</span>
+    <span class='ml2'>{{ $numDeleted }} file{{ if ne $numDeleted 1.0 }}s{{ end }} deleted {{ if $numErrors }}({{ $numErrors }} error{{ if ne $numErrors 1.0 }}s{{ end }}){{ end }}</span>
   </div>
   <div class='flex-grow-1'></div>
   <button class='f3 bg-transparent bn o-70 hover-black' data-dismiss-alert>&times;</button>
