--- a/embed/list_directory.html
+++ b/embed/list_directory.html
@@ -72,7 +72,7 @@
 {{- if eq (index $.PostRedirectGet "from") "paste" }}
 <div role='alert' class='alert mv2 pa2 br2 flex items-center'>
   <div class='flex items-center'>
-    <span class='ml2'>{{ index $.PostRedirectGet "msg" }}</span>
+    <span class='ml2'>lorem upsum dolor sit amet</span>
   </div>
   <div class='flex-grow-1'></div>
   <button class='f3 bg-transparent bn o-70 hover-black' data-dismiss-alert>&times;</button>
