--- a/embed/list_directory.html
+++ b/embed/list_directory.html
@@ -130,7 +130,7 @@
       <div class='absolute bg-white br2' style='top: calc(2rem + 4px); right: 0px; z-index: 1000; border: 1px solid black;'>
         <div class='ma2 tr'><a href='' class='nowrap arrow-before'>name</a></div>
         <div class='ma2 tr'><a href='' class='nowrap'>date created</a></div>
-        <div class='ma2 tr'><a href='' class='nowrap'>date updated</a></div>
+        <div class='ma2 tr'><a href='' class='nowrap'>date modified</a></div>
         <hr>
         <div class='ma2 tr'><a href='' class='nowrap arrow-before'>ascending</a></div>
         <div class='ma2 tr'><a href='' class='nowrap'>descending</a></div>
