--- a/embed/file.html
+++ b/embed/file.html
@@ -117,7 +117,7 @@
     <button type='button' class='button ba br2 mh2 pointer'>
       <label for='wordwrap:0' class='pointer flex items-center'>
         <input id='wordwrap:0' type='checkbox' class='pointer'>
-        <span class='mh1'>word wrap</span>
+        <span class='ml1'>word wrap</span>
       </label>
     </button>
     <button type='submit' class='button ba ph3 br2'>save</button>
