--- a/embed/file.html
+++ b/embed/file.html
@@ -49,43 +49,51 @@
 {{- end }}
 {{- if eq (index $.PostRedirectGet "from") "paste" }}
 <div role='alert' class='alert mv2 pa2 br2 flex items-center'>
-  {{- $srcHead := head (index $.PostRedirectGet "srcParent") }}
-  {{- $destHead := head (index $.PostRedirectGet "destParent") }}
-  {{- $isCut := index $.PostRedirectGet "isCut" }}
-  {{- $filesExist := index $.PostRedirectGet "filesExist" }}
-  {{- $filesInvalid := index $.PostRedirectGet "filesInvalid" }}
-  {{- $numPasted := len (index $.PostRedirectGet "filesPasted") }}
-  <div>
-    <div>{{ $numPasted }} file{{ if ne $numPasted 1 }}s{{ end }} pasted</div>
-    {{- if $filesExist }}
-    <br>
-    <div>
-      The following files already exist:
-      <ul class='list-style-disc ph3'>
-        {{- range $name := $filesExist }}
-        <li>{{ $name }}</li>
-        {{- end }}
-      </ul>
-    </div>
+  {{- $error := index $.PostRedirectGet "error" }}
+  {{- if $error }}
+    <div>{{ $error }}</div>
     {{- end }}
-    {{- if $filesInvalid }}
-    <br>
+  {{- else }}
+    {{- $srcSitePrefix := index $.PostRedirectGet "srcSitePrefix" }}
+    {{- $srcParent := index $.PostRedirectGet "srcParent" }}
+    {{- $srcHead := head (index $.PostRedirectGet "srcParent") }}
+    {{- $destHead := head (index $.PostRedirectGet "destParent") }}
+    {{- $isCut := index $.PostRedirectGet "isCut" }}
+    {{- $filesExist := index $.PostRedirectGet "filesExist" }}
+    {{- $filesInvalid := index $.PostRedirectGet "filesInvalid" }}
+    {{- $numPasted := len (index $.PostRedirectGet "filesPasted") }}
     <div>
-      {{- if eq $destHead "pages" }}
-      The following files are non-html files or contain non-html files:
-      {{- else if eq $destHead "posts" }}
-      The following files are non-markdown files or contain non-markdown files:
-      {{- else }}
-      The following files are invalid or contain invalid files:
+      <div>{{ $numPasted }} file{{ if ne $numPasted 1 }}s{{ end }} pasted</div>
+      {{- if $filesExist }}
+      <br>
+      <div>
+        The following files were not pasted because a destination file already exists:
+        <ul class='list-style-disc ph3'>
+          {{- range $name := $filesExist }}
+          <li><a href='/{{ join "files" $srcSitePrefix $srcParent $name }}{{ if not (ext $name) }}/{{ end }}'>{{ $name }}</a></li>
+          {{- end }}
+        </ul>
+      </div>
       {{- end }}
-      <ul class='list-style-disc ph3'>
-        {{- range $name := $filesInvalid }}
-        <li>{{ $name }}</li>
+      {{- if $filesInvalid }}
+      <br>
+      <div>
+        {{- if eq $destHead "pages" }}
+        The following files were not pasted because they are non-html files or contain non-html files:
+        {{- else if eq $destHead "posts" }}
+        The following files were not pasted because they are non-markdown files or contain non-markdown files:
+        {{- else }}
+        The following files were not pasted because they are invalid or contain invalid files:
         {{- end }}
-      </ul>
+        <ul class='list-style-disc ph3'>
+          {{- range $name := $filesInvalid }}
+          <li><a href='/{{ join "files" $srcSitePrefix $srcParent $name }}{{ if not (ext $name) }}/{{ end }}'>{{ $name }}</a></li>
+          {{- end }}
+        </ul>
+      </div>
+      {{- end }}
     </div>
-    {{- end }}
-  </div>
+  {{- end }}
   <div class='flex-grow-1'></div>
   <button class='f3 bg-transparent bn o-70 hover-black' data-dismiss-alert>&times;</button>
 </div>
