--- a/embed/list_directory.html
+++ b/embed/list_directory.html
@@ -151,20 +151,28 @@
         {{ template "octicons-gear" }}
         {{ template "octicons-triangle-down" }}
       </summary>
-      <form class='absolute bg-white br2' style='top: calc(2rem + 4px); right: 0px; z-index: 1000; border: 1px solid black;'>
+      <div class='absolute bg-white br2' style='top: calc(2rem + 4px); right: 0px; z-index: 1000; border: 1px solid black;'>
         <div class='ma2 tr'><a href='' class='nowrap'>list settings</a></div>
-      </form>
+        <form method='post' action='/{{ join "files" $.SitePrefix "regeneratelist" }}/{{ if tail $.FilePath }}?category={{ tail $.FilePath }}{{ end }}'>
+          <div class='ma2 tr'><button type='submit' class='button ba br2 pa2 nowrap'>regenerate list</button></div>
+        </form>
+      </div>
     </details>
   </div>
+  {{- end }}
+  {{- if and (eq (head $.FilePath) "output") (eq (head (tail $.FilePath)) "posts") }}
   <div class='flex items-center'>
     <details class='relative ml2' data-autoclose-details>
       <summary role='button' class='pointer flex items-center button ba br2 b--black ph2 h2 hide-marker' data-disable-click-selection>
-        {{ template "octicons-sync" }}
+        {{ template "octicons-gear" }}
         {{ template "octicons-triangle-down" }}
       </summary>
-      <form method='post' action='/{{ join "files" $.SitePrefix "regeneratelist" }}/{{ if tail $.FilePath }}?category={{ tail $.FilePath }}{{ end }}' class='absolute bg-white br2' style='top: calc(2rem + 4px); right: 0px; z-index: 1000; border: 1px solid black;'>
-        <div class='ma2 tr'><button type='submit' class='button ba br2 pa2 nowrap'>regenerate list</button></div>
-      </form>
+      <div class='absolute bg-white br2' style='top: calc(2rem + 4px); right: 0px; z-index: 1000; border: 1px solid black;'>
+        <div class='ma2 tr'><a href='' class='nowrap'>list settings</a></div>
+        <form method='post' action='/{{ join "files" $.SitePrefix "regeneratelist" }}/{{ if tail $.FilePath }}?category={{ tail (tail $.FilePath) }}{{ end }}'>
+          <div class='ma2 tr'><button type='submit' class='button ba br2 pa2 nowrap'>regenerate list</button></div>
+        </form>
+      </div>
     </details>
   </div>
   {{- end }}
