--- a/embed/search.html
+++ b/embed/search.html
@@ -31,7 +31,22 @@
   {{- end }}
   <div class='mv3'>
     <div><label for='text' class='b'>Text:</label></div>
-    <input id='text' name='text' placeholder='search text' class='pv1 ph2 br2 ba w-100' autocomplete='on' required>
+    <input id='text' name='text' value='{{ $.Text }}' placeholder='search text' class='pv1 ph2 br2 ba w-100' autocomplete='on' required>
+  </div>
+  <div class='mv3'>
+    <div><label for='text' class='b'>Extensions (leave blank to select all):</label></div>
+    <div class='flex items-center'>
+      <input id='ext.html' type='checkbox' name='ext' value='.html' class='pointer'{{ if hasExt ".html" }} checked{{ end }}>
+      <label for='ext.html' class='mr3 pointer'>.html</label>
+      <input id='ext.css' type='checkbox' name='ext' value='.css' class='pointer'{{ if hasExt ".css" }} checked{{ end }}>
+      <label for='ext.css' class='mr3 pointer'>.css</label>
+      <input id='ext.js' type='checkbox' name='ext' value='.js' class='pointer'{{ if hasExt ".js" }} checked{{ end }}>
+      <label for='ext.js' class='mr3 pointer'>.js</label>
+      <input id='ext.md' type='checkbox' name='ext' value='.md' class='pointer'{{ if hasExt ".md" }} checked{{ end }}>
+      <label for='ext.md' class='mr3 pointer'>.md</label>
+      <input id='ext.txt' type='checkbox' name='ext' value='.txt' class='pointer'{{ if hasExt ".txt" }} checked{{ end }}>
+      <label for='ext.txt' class='mr3 pointer'>.txt</label>
+    </div>
   </div>
   <button type='submit' class='button ba br2 pa2 mv3 w-100'>search</button>
   {{- if $.Text }}
