--- a/embed/list_directory.html
+++ b/embed/list_directory.html
@@ -6,7 +6,7 @@
 <meta name='viewport' content='width=device-width, initial-scale=1'>
 <link rel='icon' href='data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 10 10%22><text y=%221em%22 font-size=%228%22>☕</text></svg>'>
 <style>{{ stylesCSS }}</style>
-<script type='module'>{{ directoryJS }}</script>
+<script type='module'>{{ baselineJS }}</script>
 <title>
   {{- if $.FilePath }}
   {{ base $.FilePath }}{{ if $.SitePrefix }} - {{ $.SitePrefix }}{{ end }}
