--- a/embed/list_directory.html
+++ b/embed/list_directory.html
@@ -191,12 +191,12 @@
         {{ template "octicons-triangle-down" }}
       </summary>
       <div class='absolute bg-white br2' style='top: calc(2rem + 4px); right: 0px; z-index: 1000; border: 1px solid black;'>
-        <div class='ma2 tr'><a href='' class='nowrap arrow-before'>name</a></div>
-        <div class='ma2 tr'><a href='' class='nowrap'>date created</a></div>
-        <div class='ma2 tr'><a href='' class='nowrap'>date modified</a></div>
+        <div class='ma2 tr'><a href='?sort=name&order={{ $.Order }}' class='nowrap{{ if eq $.Sort "name" }} arrow-before{{ end }}'>name</a></div>
+        <div class='ma2 tr'><a href='?sort=created&order={{ $.Order }}' class='nowrap{{ if eq $.Sort "created" }} arrow-before{{ end }}'>date created</a></div>
+        <div class='ma2 tr'><a href='?sort=edited&order={{ $.Order }}' class='nowrap{{ if eq $.Sort "edited" }} arrow-before{{ end }}'>date edited</a></div>
         <hr>
-        <div class='ma2 tr'><a href='' class='nowrap arrow-before'>ascending</a></div>
-        <div class='ma2 tr'><a href='' class='nowrap'>descending</a></div>
+        <div class='ma2 tr'><a href='?sort={{ $.Sort }}&order=asc' class='nowrap{{ if eq $.Order "asc" }} arrow-before{{ end }}'>ascending</a></div>
+        <div class='ma2 tr'><a href='?sort={{ $.Sort }}&order=desc' class='nowrap{{ if eq $.Order "desc" }} arrow-before{{ end }}'>descending</a></div>
       </div>
     </details>
   </div>
