--- a/embed/list_root_directory.html
+++ b/embed/list_root_directory.html
@@ -36,13 +36,11 @@
 {{- end }}
 
 {{- if eq (index $.PostRedirectGet "from") "regenerate" }}
-  {{- if not (index $.PostRedirectGet "templateErrors") }}
   <div role='alert' class='alert mv2 pa2 br2 flex items-center'>
     <div>regenerated site ({{ index $.PostRedirectGet "count" }} file{{ if ne (index $.PostRedirectGet "count") 1.0 }}s{{ end }} in {{ index $.PostRedirectGet "timeTaken" }})</div>
     <div class='flex-grow-1'></div>
     <button class='f3 bg-transparent bn o-70 hover-black' data-dismiss-alert>&times;</button>
   </div>
-  {{- end }}
 {{- end }}
 {{- if eq (index $.PostRedirectGet "from") "createsite" }}
 <div role='alert' class='alert mv2 pa2 br2 flex items-center'>
@@ -95,14 +93,9 @@
   {{- end }}
 </div>
 {{- if eq (index $.PostRedirectGet "from") "regenerate" }}
-  {{- if index $.PostRedirectGet "templateErrors" }}
-  <div class='mv2'>
-    <div class='b invalid-red'>template errors:</div>
-    <ul class='list-style-disc ph3 invalid-red'>
-      {{- range $error := index $.PostRedirectGet "templateErrors" }}
-      <li>{{ $error }}</li>
-      {{- end }}
-    </ul>
+  {{- if index $.PostRedirectGet "templateError" }}
+  <div class='mv2 invalid-red'>
+    <span class='b'>template error: </span>{{ index $.PostRedirectGet "templateError" }}
   </div>
   {{- end }}
 {{- end }}
